syntax = "proto3"; // 版本声明，使用Protocol Buffers v3版本

option go_package = "/home/databrains/GolandProjects/RealtimeDB/rpc";  // 指定生成的Go代码在你项目中的导入路径

package rpc; // 包名


// 定义服务
service Greeter {
    rpc WritePoints (WritePointsRequest) returns (WritePointsResponse) {
    }
}

// 请求消息
message WritePointsRequest {
    string metric_tags = 1;
    double data = 6;
}

// 响应消息
message WritePointsResponse {
    string reply = 1;
}